[package]
name = "liero_wurm"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.12.1", features = ["dynamic_linking"] }
crossterm = "0.27.0"
rand = "0.8.5"
